converted to topojson

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        <p>2016 trump map. see how it becomes more red</p>
       </div>
       <div class="panel" id="flipflop">
-        <p>did you catch that? these are the counties that flip-flopped
+        <p>did you catch that? these are the counties that flip-flopped (MAKE THIS TRANSITION HAVE A DELAY)
         	fade rest of the counties to grey, stroke these with black
         Clarke
 Butler
@@ -68,6 +68,9 @@ These counties tended to have more black people</p>
       </div>
        <div class="panel" id='evangelical'>
       <p>evangelical christians. add evangelical christians to tooltip</p>
+      </div>
+       <div class="panel" id='evangelical'>
+      <p>trump strongholds had the highest dip in turnout</p>
       </div>
     </div>
   </div>
