some tooltip progress

--- a/index.html
+++ b/index.html
@@ -57,32 +57,23 @@ These counties tended to have more black people</p>
       	
       </div>
       <div class="panel" id="metropolitan">
-        <p>Mobile, Madison, Tuscaloosa are all metorpolitan areas. fade in election choropleth again. fade out rest of the counties, fade in metropolitan counties
-      	birmingham (Jefferson county),huntsville (madison county),Mobile (mobile county), montgomery (montgomery county), Tuscaloosa (tuscaloosa county).
-      	fade in city dots and annotations
-      	these areas tended to have a lot of black voters
+        <p>black belt fade out stroke, fade in black belt</p>
       </p>
       </div>
       <div class="panel" id="metropolitan">
-        <p>In particular these had lower decrease in turnout
+        <p>whites >0.8 had highest decrease in turnout
       </p>
       </div>
 
       <div class="panel" id="black">
-        <p>here are the counties with >40% black voters</p>
+        <p>evangelicals had the lowest turnout </p>
 
       </div>
       <div class="panel" id="white">
-       <p>here are the counties with >80% white voters </p>
+       <p>except for counties with a large black population. black evangelicals voted along racial rather than religious lines </p>
       </div>
       <div class="panel" id="wealthiest">
-       <p>wealthiest. add income to tooltip?</p>
-      </div>
-       <div class="panel" id='evangelical'>
-      <p>evangelical christians. add evangelical christians to tooltip</p>
-      </div>
-       <div class="panel" id='evangelical'>
-      <p>trump strongholds had the highest dip in turnout</p>
+       <p>more important than gender, income, or religion, black voters showed up to the polls and overwhemingly voted for jones </p>
       </div>
     </div>
   </div>
