final without responsive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
  <div id="container" style="height: 100vh; overflow: scroll">
     <div id="content">
     	 <div class="panel" id="title">
-        <p><h1>How Alabama Bled Blue for the First Time in 25 Years</h1></p>
+        <h1>How Alabama Bled Blue for the First Time in 25 Years</h1>
+        <h3> by Elbert Wang </h3>
+
+        <h4> Scroll to continue</h4>
       </div>
       <div class="panel" id="default">
         <p>In an election marred by allegations of sexual abuse by Republican candidate Roy Moore, Democrat Doug Jones pulled off a remarkable upset in the 2017 Senate special election in Alabama, one of the consistently reddest states in the U.S. In his victory speech, Jones seemed as surprised as the rest of the nation was that he had won. Here's how he did it. As you scroll, pay close attention to how the map changes.</p>
@@ -64,6 +67,10 @@
       </div>
       <div class="panel" id="wealthiest">
        <p>While the controversy deterred white voters from coming to the polls at all, it energized black voters across all gender, income, and religious lines. Overwhelmingly, they voted for Jones, forming a bastion of support that made Jones the first Democrat to win a U.S. Senate seat in 25 years. 	 </p>
+      </div>
+      <div class="panel" id="wealthiest">
+      	<h2> Methodology </h2>
+       <p> Election data for the 2017 Special Senate election and 2016 Presidential election are from the <a href="http://sos.alabama.gov/alabama-votes">Alabama Secretary of State</a>. Religious data is from the <a href="http://www.thearda.com/">Association of Religion Data Archives</a>. Shapefile of Alabama is from the Census Bureau.	</p>
       </div>
     </div>
   </div>
